WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183405
checkForSiblingStyleChanges should use internal versions of the invalidation functions
https://bugs.webkit.org/show_bug.cgi?id=183405
Summary
checkForSiblingStyleChanges should use internal versions of the invalidation ...
Antti Koivisto
Reported
2018-03-07 05:20:29 PST
It already knows about sibling combinators.
Attachments
patch
(6.93 KB, patch)
2018-03-07 05:28 PST
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews200 for win-future
(12.09 MB, application/zip)
2018-03-07 07:06 PST
,
EWS Watchlist
no flags
Details
patch
(8.49 KB, patch)
2018-03-07 08:28 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-07 05:21:09 PST
<
rdar://problem/38218310
>
Antti Koivisto
Comment 2
2018-03-07 05:28:15 PST
Created
attachment 335186
[details]
patch
EWS Watchlist
Comment 3
2018-03-07 07:06:03 PST
Comment on
attachment 335186
[details]
patch
Attachment 335186
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6838884
New failing tests: fast/selectors/first-child-sibling-style-update.html fast/selectors/first-child-direct-adjacent-style-update.html
EWS Watchlist
Comment 4
2018-03-07 07:06:14 PST
Created
attachment 335191
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Antti Koivisto
Comment 5
2018-03-07 08:28:25 PST
Created
attachment 335193
[details]
patch
WebKit Commit Bot
Comment 6
2018-03-07 10:28:00 PST
Comment on
attachment 335193
[details]
patch Clearing flags on attachment: 335193 Committed
r229368
: <
https://trac.webkit.org/changeset/229368
>
WebKit Commit Bot
Comment 7
2018-03-07 10:28:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug