checkForSiblingStyleChanges should use internal versions of the invalidation functions https://bugs.webkit.org/show_bug.cgi?id=183405 <rdar://problem/38218310>

Reviewed by Zalan Bujtas.

Non-internal invalidateStyleForElement/Subtree() implement sibling combinator invalidation. Checking this
is only needed if the element in question changed somehow. In checkForSiblingStyleChanges we know that
another element changed and we really just want to invalidate.

* css/SelectorChecker.cpp:
(WebCore::isFirstOfType):
(WebCore::SelectorChecker::checkOne const):

Also make :first-of-type use ChildrenAffectedByForwardPositionalRules for invalidation similar to :last-of-type
for more correct invalidation.

* dom/Element.cpp:
(WebCore::checkForSiblingStyleChanges):


Canonical link: https://commits.webkit.org/199077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229368 268f45cc-cd09-0410-ab3c-d52691b4dbfc